@@ -104,7 +104,7 @@ def find_first_output(op, required):
 def cppize(name):
     return re.sub('-', '_', name)
 
-def gen_arg_list(required):
+def gen_arg_list(op, required):
     first = True
     for prop in required:
         if not first:
@@ -113,6 +113,12 @@ def gen_arg_list(required):
             first = False
 
         print get_ctype(prop),
+
+        # output params are passed by reference
+        flags = op.get_argument_flags(prop.name)
+        if flags & Vips.ArgumentFlags.OUTPUT:
+            print '*',
+
         print cppize(prop.name),
 
     if not first:
@@ -142,7 +148,7 @@ def gen_operation(cls):
 
     print 'VImage::%s(' % nickname,
 
-    gen_arg_list(required)
+    gen_arg_list(op, required)
 
     print ')'
     print '    throw( VError )'
@@ -167,7 +173,7 @@ def gen_operation(cls):
         else:
             flags = op.get_argument_flags(prop.name)
             arg = cppize(prop.name)
-            if flags & Vips.ArgumentFlags.OUTPUT:
+            if flags & Vips.ArgumentFlags.OUTPUT and prop == result:
                 arg = '&' + arg
 
             print 'set( "%s", %s )' % (prop.name, arg),
